--- a/src/scss/component/select.scss
+++ b/src/scss/component/select.scss
@@ -2,7 +2,7 @@
 
 .select { 
 	border-radius: 4px; border: solid 1px #d2d0c2; display: inline-block; vertical-align: middle; font-size: 13px; line-height: 18px;
-	letter-spacing: 0.08px; transition: $transitionFast; position: relative; cursor: pointer;
+	letter-spacing: 0.08px; transition: $transitionFast; position: relative; cursor: pointer; font-family: 'Lcg';
 }
 
 .select:hover { background: #f7f5f0; }
