--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -14,7 +14,10 @@
 		.h3 { padding: 7px 0px 3px 0px; font-size: 18px; line-height: 26px; letter-spacing: -0.08px; font-weight: 600; }
 		.h4 { font-size: 18px; line-height: 26px; letter-spacing: -0.08px; }
 		.quote { font-size: 13px; line-height: 22px; letter-spacing: 0.08px; }
-		.code { font-family: 'Mono'; line-height: 1.71; padding: 16px 24px; margin: 7px 0px; background: rgba(247,245,240,0.5); }
+		.code { font-family: 'Mono'; line-height: 1.71; padding: 32px 24px 16px 24px; margin: 7px 0px; background: rgba(247,245,240,0.5); }
+		.code {
+			.select { position: absolute; top: 1px; right: 1px; padding: 0px 22px 0px 8px; font-size: 12px; height: 24px; border: 0px; }
+		}
 		
 		a { cursor: pointer; }
 		kbd { display: inline-block; font-family: 'Mono'; line-height: 1.71; background: rgba(247,245,240,0.5); padding: 0px 4px; }
