--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -1,10 +1,10 @@
 @import "~scss/_vars";
 
 .editor {
-	.icon.add { 
+	.icon.buttonAdd { 
 		width: 20px; height: 20px; border-radius: 100%; border: solid 1px #d2d0c2; position: absolute; z-index: 5; cursor: pointer; user-select: none;
 		background-size: 10px 10px; background-image: url('~img/icon/block/add0.svg'); opacity: 0;
 		transition: opacity 0.2s ease-in-out, background 0.2s ease-in-out, border-color 0.2s ease-in-out; 
 	}
-	.icon.add:hover { background-image: url('~img/icon/block/add1.svg'); background-color: $colorOrange; border-color: $colorOrange; }
+	.icon.buttonAdd:hover { background-image: url('~img/icon/block/add1.svg'); background-color: $colorOrange; border-color: $colorOrange; }
 }
