block text and mark updates

--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -20,7 +20,7 @@
 		}
 		
 		a { cursor: pointer; }
-		kbd { display: inline-block; font-family: 'Mono'; line-height: 1.71; background: rgba(247,245,240,0.5); padding: 0px 4px; }
+		kbd { display: inline; font-family: 'Mono'; line-height: 1.71; background: rgba(247,245,240,0.5); padding: 0px 4px; }
 		
 		.markers { white-space: nowrap; }
 		.markers {
