--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -32,8 +32,8 @@
 				.icon { position: absolute; left: 50%; top: 50%; display: block; }
 			}
 			
-			.marker.bullet.c1 { width: auto; min-width: 24px; height: auto; vertical-align: baseline; line-height: inherit; }
-			.marker.bullet.c2 {
+			.marker.number { width: auto; min-width: 24px; height: auto; vertical-align: baseline; line-height: inherit; }
+			.marker.bullet {
 				.icon { width: 6px; height: 6px; background: $colorBlack; border-radius: 100%; margin: -3px 0px 0px -3px; }
 			}
 			
