--- a/src/scss/menu/block/color.scss
+++ b/src/scss/menu/block/color.scss
@@ -6,13 +6,13 @@
 		.section { padding: 10px 12px; }
 		.item { 
 			width: 24px; height: 24px; text-align: center; display: inline-block; vertical-align: top; padding: 0px;
-			border-radius: 4px; position: relative; margin: 0px 4px 4px 0px;
+			border-radius: 2px; position: relative; margin: 0px 4px 4px 0px;
 		}
 		.item.active { box-shadow: 0px 0px 0px 1px inset #2c2b27; }
 		
 		.item {
 			.inner { 
-				width: 18px; height: 18px; line-height: 18px; border-radius: 100%; display: inline-block; vertical-align: middle;
+				width: 18px; height: 18px; line-height: 18px; border-radius: 2px; display: inline-block; vertical-align: middle;
 				font-size: 11px; position: absolute; top: 3px; left: 3px;
 			}
 		}
