--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -4,9 +4,9 @@
 	.dimmer { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 102; background: rgba(0,0,0,0); }
 	
 	.menu { 
-		border-radius: 4px; color: #fff; position: absolute; z-index: 103; text-align: left; padding: 4px;
-		box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.3); background: $colorBlack; opacity: 0; transform: scale3d(0.8,0.8,1);
-		transition: opacity 0.15s ease-in-out, transform 0.15s ease-in-out; 
+		border-radius: 8px; color: $colorBlack; position: absolute; z-index: 103; text-align: left; padding: 8px 0px;
+		box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.3); background: #fff; opacity: 0; transform: scale3d(0.8,0.8,1);
+		transition: opacity 0.15s ease-in-out, transform 0.15s ease-in-out;
 	}
 	.menu.show { opacity: 1; transform: scale3d(1,1,1); }
 	
@@ -37,12 +37,11 @@
 		}
 	
 		.item { 
-			padding: 6px 8px; font-size: 15px; letter-spacing: 0.2px; border-radius: 4px; position: relative; cursor: pointer; 
+			padding: 7px 16px; font-size: 15px; letter-spacing: 0.2px; position: relative; cursor: pointer; 
 			transition: all 0.15s ease-in-out; width: 100%;
 		}
 		.item.dragging { transition: none; box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); }
-		.item:hover { background: #56554f; }
-		.item.active { background: $colorBlack; }
+		.item:hover, .item.active { background: #aca996 !important; }
 		
 		.icon { margin-right: 8px; }
 		.icon.dnd { width: 7px; height: 12px; background-image: url('~img/icon/dnd.svg'); margin-right: 10px; }
@@ -59,7 +58,7 @@
 		.section { border-bottom: 1px solid #dfddd0; }
 		.section:last-child { border: 0px; }
 		
-		.section > .name { font-size: 13px; line-height: 18px; color: #aca996; display: block; }
+		.section > .name { font-size: 13px; line-height: 18px; letter-spacing: 0.08px; color: #aca996; display: block; }
 	}
 	
 	.menu.horizontal {
@@ -70,24 +69,13 @@
 		.icon { width: 32px; height: 32px; margin-right: 8px; border-radius: 4px; background-size: 24px 24px; cursor: pointer; }
 		.icon:last-child { margin: 0px; }
 		
-		
 		.icon {
 			.arrow { 
-				width: 8px; height: 8px; background-image: url('~img/icon/menu/action/arrow0.svg'); position: absolute; right: -10px; top: 50%; 
+				width: 8px; height: 8px; background-image: url('~img/icon/menu/action/arrow.svg'); position: absolute; right: -10px; top: 50%; 
 				margin-top: -4px;
 			}
 		}
-		.icon:hover, .icon.active { background-color: $colorOrange; }
-		.icon:hover, .icon.active {
-			.arrow { background-image: url('~img/icon/menu/action/arrow1.svg'); }
-		}
-	}
-	
-	.menu.light { padding: 8px 0px; background: #fff; color: $colorBlack; border-radius: 8px; }
-	.menu.light {
-		.item { padding: 7px 16px; font-size: 13px; line-height: 18px; border-radius: 0px; }
-		.item.dragging { background: #fff; }
-		.item:hover, .item.active { background: #f7f5f0 !important; }
+		.icon:hover, .icon.active { background-color: #aca996; }
 	}
 }
 
