#22: block action menu + menu refactoring

--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -26,6 +26,17 @@
 .icon.bookmark { background-image: url('~img/icon/menu/action/block/bookmark0.svg'); }
 .icon.code { background-image: url('~img/icon/menu/action/block/code0.svg'); }
 
+.icon.bold { background-image: url('~img/icon/menu/action/mark/bold0.svg'); }
+.icon.italic { background-image: url('~img/icon/menu/action/mark/italic0.svg'); }
+.icon.strike { background-image: url('~img/icon/menu/action/mark/strike0.svg'); }
+.icon.link { background-image: url('~img/icon/menu/action/mark/link0.svg'); }
+.icon.code { background-image: url('~img/icon/menu/action/mark/code0.svg'); }
+.icon.color { background-image: url('~img/icon/menu/action/mark/color0.svg'); }
+
+.icon.comment { background-image: url('~img/icon/menu/action/comment0.svg'); }
+.icon.copy { background-image: url('~img/icon/menu/action/copy0.svg'); }
+.icon.remove { background-image: url('~img/icon/menu/action/remove0.svg'); }
+
 /* Hover */
 
 .icon.text:hover, .icon.text.active { background-image: url('~img/icon/menu/action/block/text1.svg'); }
@@ -53,6 +64,17 @@
 .icon.video:hover, .icon.video.active { background-image: url('~img/icon/menu/action/block/video1.svg'); }
 .icon.bookmark:hover, .icon.bookmark.active { background-image: url('~img/icon/menu/action/block/bookmark1.svg'); }
 .icon.code:hover, .icon.code.active { background-image: url('~img/icon/menu/action/block/code1.svg'); }
+
+.icon.bold:hover, .icon.bold.active { background-image: url('~img/icon/menu/action/mark/bold1.svg'); }
+.icon.italic:hover, .icon.italic.active { background-image: url('~img/icon/menu/action/mark/italic1.svg'); }
+.icon.strike:hover, .icon.strike.active { background-image: url('~img/icon/menu/action/mark/strike1.svg'); }
+.icon.link:hover, .icon.link.active { background-image: url('~img/icon/menu/action/mark/link1.svg'); }
+.icon.code:hover, .icon.code.active { background-image: url('~img/icon/menu/action/mark/code1.svg'); }
+.icon.color:hover, .icon.color.active { background-image: url('~img/icon/menu/action/mark/color1.svg'); }
+
+.icon.comment:hover, .icon.comment.active { background-image: url('~img/icon/menu/action/comment1.svg'); }
+.icon.copy:hover, .icon.copy.active { background-image: url('~img/icon/menu/action/copy1.svg'); }
+.icon.remove:hover, .icon.remove.active { background-image: url('~img/icon/menu/action/remove1.svg'); }
 
 /* Item:Hover */
 
@@ -83,4 +105,15 @@
 	.icon.video { background-image: url('~img/icon/menu/action/block/video1.svg'); }
 	.icon.bookmark { background-image: url('~img/icon/menu/action/block/bookmark1.svg'); }
 	.icon.code { background-image: url('~img/icon/menu/action/block/code1.svg'); }
+	
+	.icon.bold { background-image: url('~img/icon/menu/action/mark/bold1.svg'); }
+	.icon.italic { background-image: url('~img/icon/menu/action/mark/italic1.svg'); }
+	.icon.strike { background-image: url('~img/icon/menu/action/mark/strike1.svg'); }
+	.icon.link { background-image: url('~img/icon/menu/action/mark/link1.svg'); }
+	.icon.code { background-image: url('~img/icon/menu/action/mark/code1.svg'); }
+	.icon.color { background-image: url('~img/icon/menu/action/mark/color1.svg'); }
+	
+	.icon.comment { background-image: url('~img/icon/menu/action/comment1.svg'); }
+	.icon.copy { background-image: url('~img/icon/menu/action/copy1.svg'); }
+	.icon.remove { background-image: url('~img/icon/menu/action/remove1.svg'); }
 }
