--- a/src/scss/menu/block/action.scss
+++ b/src/scss/menu/block/action.scss
@@ -1,7 +1,9 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuBlockAction { }
+	.menu.menuBlockAction { width: 192px; }
 	.menu.menuBlockAction {
+		.section { padding: 4px 0px; }
+		.input { font-weight: 500; font-size: 15px; padding: 0px 15px; }
 	}
 }
