--- a/src/scss/menu/block/add.scss
+++ b/src/scss/menu/block/add.scss
@@ -1,9 +1,9 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuBlockAdd, .menu.menuBlockAddSub, .menuBlockSwitch { width: 192px !important; }
-	.menu.menuBlockAdd, .menu.menuBlockAddSub, .menuBlockSwitch {
-		.item { font-size: 15px !important; font-weight: 500; padding: 4px 12px; }
+	.menu.menuBlockAdd, .menu.menuBlockAddSub, .menuBlockStyle, .menuBlockAction { width: 192px !important; }
+	.menu.menuBlockAdd, .menu.menuBlockAddSub, .menuBlockStyle, .menuBlockAction {
+		.item { font-size: 15px !important; font-weight: 500; padding: 4px 12px !important; }
 		.item {
 			.name { line-height: 1; }
 		}
@@ -21,5 +21,11 @@
 		.item:hover, .item.active {
 			.icon.arrow { background-image: url('~img/icon/menu/add/arrow1.svg'); }
 		}
+	}
+	
+	.menuBlockStyle { padding: 0px; }
+	.menuBlockStyle {
+		.section { padding: 10px 0px; }
+		.section > .name { padding: 0px 15px; }
 	}
 }
