--- a/src/scss/menu/block/color.scss
+++ b/src/scss/menu/block/color.scss
@@ -12,7 +12,7 @@
 		.item {
 			.inner { 
 				width: 18px; height: 18px; line-height: 18px; border-radius: 2px; display: inline-block; vertical-align: middle;
-				font-size: 11px; position: absolute; top: 3px; left: 3px;
+				font-size: 11px; position: absolute; top: 3px; left: 3px; color: $colorBlack;
 			}
 		}
 		
