--- a/src/scss/menu/block/context.scss
+++ b/src/scss/menu/block/context.scss
@@ -3,6 +3,6 @@
 .menus {
 	.menu.menuBlockContext { padding: 0px; transform-origin: 50% 50% !important; }
 	.menu.menuBlockContext {
-		.section:first-child { padding-right: 22px; }
+		.icon.blockStyle { width: 48px; background-position: 8px center; }
 	}
 }
