--- a/src/scss/menu/block/add.scss
+++ b/src/scss/menu/block/add.scss
@@ -8,7 +8,6 @@
 			.name { line-height: 1; }
 		}
 		
-		.item:hover, .item.active { color: #fff; }
 		.item.yellow:hover, .item.yellow.active { background: $colorOrange !important; }
 		.item.green:hover, .item.green.active { background: #0cbbae !important; }
 		.item.blue:hover, .item.blue.active { background: #1ba0eb !important; }
@@ -17,15 +16,36 @@
 	
 		.icon { width: 24px; height: 24px; background-size: 100% 100%; }
 		.icon.arrow { position: absolute; right: 8px; top: 4px; margin: 0px; background-image: url('~img/icon/menu/add/arrow0.svg'); }
-		
-		.item:hover, .item.active {
-			.icon.arrow { background-image: url('~img/icon/menu/add/arrow1.svg'); }
-		}
 	}
 	
-	.menuBlockStyle { padding: 0px; }
-	.menuBlockStyle {
-		.section { padding: 10px 0px; }
-		.section > .name { padding: 0px 15px; }
+	.menu.menuBlockAdd, .menu.menuBlockAddSub {
+		.item:hover, .item.active { color: #fff; }
+		.item:hover, .item.active {
+			.icon.arrow { background-image: url('~img/icon/menu/add/arrow1.svg'); }
+			.icon.text { background-image: url('~img/icon/menu/action/block/text1.svg'); }
+			.icon.list { background-image: url('~img/icon/menu/action/block/list1.svg'); }
+			.icon.tool { background-image: url('~img/icon/menu/action/block/tool1.svg'); }
+			.icon.media { background-image: url('~img/icon/menu/action/block/media1.svg'); }
+			.icon.other { background-image: url('~img/icon/menu/action/block/other1.svg'); }
+			
+			.icon.header1 { background-image: url('~img/icon/menu/action/block/header11.svg'); }
+			.icon.header2 { background-image: url('~img/icon/menu/action/block/header21.svg'); }
+			.icon.header3 { background-image: url('~img/icon/menu/action/block/header31.svg'); }
+			.icon.quote { background-image: url('~img/icon/menu/action/block/quote1.svg'); }
+			
+			.icon.task { background-image: url('~img/icon/menu/action/block/task1.svg'); }
+			.icon.set { background-image: url('~img/icon/menu/action/block/set1.svg'); }
+			.icon.contact { background-image: url('~img/icon/menu/action/block/contact1.svg'); }
+			.icon.existing { background-image: url('~img/icon/menu/action/block/existing1.svg'); }
+			
+			.icon.checkbox { background-image: url('~img/icon/menu/action/block/checkbox1.svg'); }
+			.icon.numbered { background-image: url('~img/icon/menu/action/block/numbered1.svg'); }
+			.icon.toggle { background-image: url('~img/icon/menu/action/block/toggle1.svg'); }
+			
+			.icon.picture { background-image: url('~img/icon/menu/action/block/picture1.svg'); }
+			.icon.video { background-image: url('~img/icon/menu/action/block/video1.svg'); }
+			.icon.bookmark { background-image: url('~img/icon/menu/action/block/bookmark1.svg'); }
+			.icon.code { background-image: url('~img/icon/menu/action/block/code1.svg'); }
+		}
 	}
 }
