--- a/src/scss/menu/block/color.scss
+++ b/src/scss/menu/block/color.scss
@@ -1,44 +1,23 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuBlockColor { width: 192px; padding: 0px; }
+	.menu.menuBlockColor { width: 208px; padding: 0px; }
 	.menu.menuBlockColor {
 		.section { padding: 10px 12px; }
+		.section > .name { margin-bottom: 10px; }
 		.item { 
-			width: 24px; height: 24px; text-align: center; display: inline-block; vertical-align: top; padding: 0px;
-			border-radius: 2px; position: relative; margin: 0px 4px 4px 0px;
+			width: 24px; height: 24px; line-height: 22px; text-align: center; display: inline-block; vertical-align: top; padding: 0px;
+			border-radius: 2px; position: relative; margin: 0px 8px 8px 0px; font-size: 15px; font-weight: 500;
+		}
+		.items {
+			.item:nth-child(6n) { margin-right: 0px; }
 		}
 		
-		.item {
-			.inner { 
-				width: 18px; height: 18px; line-height: 18px; border-radius: 2px; display: inline-block; vertical-align: middle;
-				font-size: 11px; position: absolute; top: 3px; left: 3px; color: $colorBlack;
-			}
-		}
+		.item.textColor { border: 1px solid #dfddd0; }
+		.item.bgColor { border: 1px solid rgba(0,0,0,0); }
 		
-		.item.text .inner .txt { display: none; }
+		.item:hover, .item.active { border-color: #aca996; } 
 		
-		.item.text.black .inner { background: #2c2b27; }
-		.item.text.grey .inner { background: #aca996; }
-		.item.text.yellow .inner { background: #ecd91b; }
-		.item.text.orange .inner { background: #ffb522; }
-		.item.text.red .inner { background: #f55522; }
-		.item.text.pink .inner { background: #e51ca0; }
-		.item.text.purple .inner { background: #ab50cc; }
-		.item.text.blue .inner { background: #3e58eb; }
-		.item.text.ice .inner { background: #2aa7ee; }
-		.item.text.teal .inner { background: #0fc8ba; }
-		.item.text.lime .inner { background: #5dd400; }
-		
-		.item.bg.grey .inner { box-shadow: 0px 0px 0px 1px inset #dfddd0; }
-		.item.bg.yellow .inner { background: #fef9cc; }
-		.item.bg.orange .inner { background: #fef3c5; }
-		.item.bg.red .inner { background: #ffebe5; }
-		.item.bg.pink .inner { background: #fee3f5; }
-		.item.bg.purple .inner { background: #f4e3fa; }
-		.item.bg.blue .inner { background: #f4e3fa; }
-		.item.bg.ice .inner { background: #d6effd; }
-		.item.bg.teal .inner { background: #d6f5f3; }
-		.item.bg.lime .inner { background: #e3f7d0; }
+		.item.textColor:hover, .item.textColor.active { background: none; }
 	}
 }
