--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -1,5 +1,3 @@
-/* Common */
-
 .icon.text { background-image: url('~img/icon/menu/action/block/text0.svg'); }
 .icon.list { background-image: url('~img/icon/menu/action/block/list0.svg'); }
 .icon.tool { background-image: url('~img/icon/menu/action/block/tool0.svg'); }
@@ -29,88 +27,16 @@
 .icon.italic { background-image: url('~img/icon/menu/action/mark/italic0.svg'); }
 .icon.strike { background-image: url('~img/icon/menu/action/mark/strike0.svg'); }
 .icon.link { background-image: url('~img/icon/menu/action/mark/link0.svg'); }
-.icon.code { background-image: url('~img/icon/menu/action/mark/code0.svg'); }
-.icon.color { background-image: url('~img/icon/menu/action/mark/color0.svg'); }
+.icon.kbd { background-image: url('~img/icon/menu/action/mark/code0.svg'); }
 
+.icon.move { background-image: url('~img/icon/menu/action/move0.svg'); }
 .icon.comment { background-image: url('~img/icon/menu/action/comment0.svg'); }
 .icon.copy { background-image: url('~img/icon/menu/action/copy0.svg'); }
 .icon.remove { background-image: url('~img/icon/menu/action/remove0.svg'); }
 
-/* Hover */
-
-.icon.text:hover, .icon.text.active { background-image: url('~img/icon/menu/action/block/text1.svg'); }
-.icon.list:hover, .icon.list.active { background-image: url('~img/icon/menu/action/block/list1.svg'); }
-.icon.tool:hover, .icon.tool.active { background-image: url('~img/icon/menu/action/block/tool1.svg'); }
-.icon.media:hover, .icon.media.active { background-image: url('~img/icon/menu/action/block/media1.svg'); }
-.icon.other:hover, .icon.other.active { background-image: url('~img/icon/menu/action/block/other1.svg'); }
-	
-.icon.header1:hover, .icon.header1.active { background-image: url('~img/icon/menu/action/block/header11.svg'); }
-.icon.header2:hover, .icon.header2.active { background-image: url('~img/icon/menu/action/block/header21.svg'); }
-.icon.header3:hover, .icon.header3.active { background-image: url('~img/icon/menu/action/block/header31.svg'); }
-.icon.quote:hover, .icon.quote.active { background-image: url('~img/icon/menu/action/block/quote1.svg'); }
-	
-.icon.task:hover, .icon.task.active { background-image: url('~img/icon/menu/action/block/task1.svg'); }
-.icon.set:hover, .icon.set.active { background-image: url('~img/icon/menu/action/block/set1.svg'); }
-.icon.contact:hover, .icon.contact.active { background-image: url('~img/icon/menu/action/block/contact1.svg'); }
-.icon.existing:hover, .icon.existing.active { background-image: url('~img/icon/menu/action/block/existing1.svg'); }
-	
-.icon.checkbox:hover, .icon.checkbox.active { background-image: url('~img/icon/menu/action/block/checkbox1.svg'); }
-.icon.numbered:hover, .icon.numbered.active { background-image: url('~img/icon/menu/action/block/numbered1.svg'); }
-.icon.toggle:hover, .icon.toggle.active { background-image: url('~img/icon/menu/action/block/toggle1.svg'); }
-	
-.icon.picture:hover, .icon.picture.active { background-image: url('~img/icon/menu/action/block/picture1.svg'); }
-.icon.video:hover, .icon.video.active { background-image: url('~img/icon/menu/action/block/video1.svg'); }
-.icon.bookmark:hover, .icon.bookmark.active { background-image: url('~img/icon/menu/action/block/bookmark1.svg'); }
-.icon.code:hover, .icon.code.active { background-image: url('~img/icon/menu/action/block/code1.svg'); }
-
-.icon.bold:hover, .icon.bold.active { background-image: url('~img/icon/menu/action/mark/bold1.svg'); }
-.icon.italic:hover, .icon.italic.active { background-image: url('~img/icon/menu/action/mark/italic1.svg'); }
-.icon.strike:hover, .icon.strike.active { background-image: url('~img/icon/menu/action/mark/strike1.svg'); }
-.icon.link:hover, .icon.link.active { background-image: url('~img/icon/menu/action/mark/link1.svg'); }
-.icon.code:hover, .icon.code.active { background-image: url('~img/icon/menu/action/mark/code1.svg'); }
-.icon.color:hover, .icon.color.active { background-image: url('~img/icon/menu/action/mark/color1.svg'); }
-
-.icon.comment:hover, .icon.comment.active { background-image: url('~img/icon/menu/action/comment1.svg'); }
-.icon.copy:hover, .icon.copy.active { background-image: url('~img/icon/menu/action/copy1.svg'); }
-.icon.remove:hover, .icon.remove.active { background-image: url('~img/icon/menu/action/remove1.svg'); }
-
-/* Item:Hover */
-
-.item:hover, .item.active {
-	.icon.arrow { background-image: url('~img/icon/menu/add/arrow1.svg'); }
-	.icon.text { background-image: url('~img/icon/menu/action/block/text1.svg'); }
-	.icon.list { background-image: url('~img/icon/menu/action/block/list1.svg'); }
-	.icon.tool { background-image: url('~img/icon/menu/action/block/tool1.svg'); }
-	.icon.media { background-image: url('~img/icon/menu/action/block/media1.svg'); }
-	.icon.other { background-image: url('~img/icon/menu/action/block/other1.svg'); }
-	
-	.icon.header1 { background-image: url('~img/icon/menu/action/block/header11.svg'); }
-	.icon.header2 { background-image: url('~img/icon/menu/action/block/header21.svg'); }
-	.icon.header3 { background-image: url('~img/icon/menu/action/block/header31.svg'); }
-	.icon.quote { background-image: url('~img/icon/menu/action/block/quote1.svg'); }
-	
-	.icon.task { background-image: url('~img/icon/menu/action/block/task1.svg'); }
-	.icon.set { background-image: url('~img/icon/menu/action/block/set1.svg'); }
-	.icon.contact { background-image: url('~img/icon/menu/action/block/contact1.svg'); }
-	.icon.existing { background-image: url('~img/icon/menu/action/block/existing1.svg'); }
-	
-	.icon.checkbox { background-image: url('~img/icon/menu/action/block/checkbox1.svg'); }
-	.icon.numbered { background-image: url('~img/icon/menu/action/block/numbered1.svg'); }
-	.icon.toggle { background-image: url('~img/icon/menu/action/block/toggle1.svg'); }
-	
-	.icon.picture { background-image: url('~img/icon/menu/action/block/picture1.svg'); }
-	.icon.video { background-image: url('~img/icon/menu/action/block/video1.svg'); }
-	.icon.bookmark { background-image: url('~img/icon/menu/action/block/bookmark1.svg'); }
-	.icon.code { background-image: url('~img/icon/menu/action/block/code1.svg'); }
-	
-	.icon.bold { background-image: url('~img/icon/menu/action/mark/bold1.svg'); }
-	.icon.italic { background-image: url('~img/icon/menu/action/mark/italic1.svg'); }
-	.icon.strike { background-image: url('~img/icon/menu/action/mark/strike1.svg'); }
-	.icon.link { background-image: url('~img/icon/menu/action/mark/link1.svg'); }
-	.icon.code { background-image: url('~img/icon/menu/action/mark/code1.svg'); }
-	.icon.color { background-image: url('~img/icon/menu/action/mark/color1.svg'); }
-	
-	.icon.comment { background-image: url('~img/icon/menu/action/comment1.svg'); }
-	.icon.copy { background-image: url('~img/icon/menu/action/copy1.svg'); }
-	.icon.remove { background-image: url('~img/icon/menu/action/remove1.svg'); }
+.icon.color {
+	.inner { 
+		border: 1px solid #dfddd0; width: 24px; height: 24px; line-height: 24px; text-align: center;
+		font-weight: 500; font-size: 15px; position: absolute; left: 50%; top: 50%; margin: -12px 0px 0px -12px; border-radius: 2px;
+	}
 }
