--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -5,7 +5,7 @@
 	.block {
 		.id { position: absolute; left: 0px; top: 1px; z-index: 2; opacity: 0.3; display: none; }
 		.wrapMenu { width: 50px; text-align: right; }
-		.wrapContent { width: calc(100% - 50px); position: relative; }
+		.wrapContent { width: calc(100% - 50px); position: relative; overflow: hidden; }
 		
 		.flex { position: relative; z-index: 1; }
 		.icon.dnd { 
