--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -33,6 +33,7 @@
 .icon.comment { background-image: url('~img/icon/menu/action/comment0.svg'); }
 .icon.copy { background-image: url('~img/icon/menu/action/copy0.svg'); }
 .icon.remove { background-image: url('~img/icon/menu/action/remove0.svg'); }
+.icon.more { background-image: url('~img/icon/menu/action/more0.svg'); }
 
 .icon.color {
 	.inner { 
