--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -34,7 +34,7 @@
 	.block.isAddingMenu.mtop > .wrapContent { box-shadow: 0px -2px $colorOrange; }
 	.block.isAddingMenu.mbottom > .wrapContent { box-shadow: 0px 2px $colorOrange; }
 	
-	.block.canToggle > .wrapContent > .children { display: none; }
+	.block > .wrapContent > .children.canToggle { display: none; }
 	.block.isToggled > .wrapContent > .children { display: block; }
 	.block.isToggled > .wrapContent > .selectable > .dropTarget > .flex > .markers > .marker.toggle { transform: rotateZ(90deg); }
 	
