#11: pincode checking + #34: smile menu fix

--- a/src/scss/page/auth.scss
+++ b/src/scss/page/auth.scss
@@ -21,7 +21,7 @@
 	.label { margin-bottom: 9px; }
 }
 
-.pageAuthPinSelect, .pageAuthPinConfirm {
+.pageAuthPinSelect, .pageAuthPinConfirm, .pageAuthPinCheck {
 	.input { width: 40px; margin-right: 8px; padding: 0px; text-align: center; vertical-align: top; font-size: 18px; }
 	.input-password { font-size: 36px; }
 	.input:last-child { margin: 0px; }
