--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -28,6 +28,7 @@ select:-webkit-autofill:focus { transition: background-color 5000s ease-in-out 0
 input, textarea, select { font-family: 'Lcg'; }
 
 #drag { -webkit-app-region: drag; position: fixed; top: 0px; left: 0px; width: 100%; height: 36px; z-index: -1; user-select: none; }
+#root > .loaderWrapper { position: fixed; width: 100%; height: 100%; left: 0px; top: 0px; }
 
 .dn { display: none !important; }
 .txt { vertical-align: middle; display: inline-block; line-height: 1; }
