block copy/paste integration

--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -48,7 +48,7 @@
 	}
 	
 	/* Row */
-	.block.blockLayout.c0 { padding: 14px 0px; }
+	.block.blockLayout.c0 { padding: 7px 0px 0px 0px; }
 	.block.blockLayout.c0 > .wrapMenu { display: none; }
 	.block.blockLayout.c0 > .wrapContent { width: 100%; }
 	.block.blockLayout.c0 > .wrapContent > .children { display: flex; }
