--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -6,7 +6,7 @@
 		.wrap { flex: auto; position: relative; }
 		.value { -webkit-user-modify: read-write-plaintext-only; }
 		
-		.placeHolder { color: #adaa95; position: absolute; z-index: 0; left: 0px; top: 0px; display: none; }
+		.placeHolder { color: #ebe9e0; position: absolute; z-index: 0; left: 0px; top: 0px; display: none; }
 		
 		.title { padding: 13px 0px 24px 0px; }
 		.header1 { padding: 5px 0px 2px 0px; font-size: 28px; line-height: 32px; letter-spacing: -0.36px; font-weight: 600; }
