--- a/src/scss/block/video.scss
+++ b/src/scss/block/video.scss
@@ -4,5 +4,6 @@
 	.block.blockVideo { padding: 7px 0px; }
 	.block.blockVideo {
 		video { width: 100%; }
+		.error { margin: 0px; font-size: 13px; line-height: 18px; }
 	}
 }
