--- a/src/scss/block/file.scss
+++ b/src/scss/block/file.scss
@@ -4,6 +4,7 @@
 	.block.blockFile { padding: 7px 0px; white-space: nowrap; }
 	.block.blockFile {
 		.loaderWrapper { border-radius: 4px; border: solid 1px #d2d0c2; height: 48px; width: 100%; }
+		.error { margin: 0px; font-size: 13px; line-height: 18px; }
 		
 		.name {
 			min-width: 40px; max-width: calc(100% - 180px); height: 24px; line-height: 24px; display: inline-block; overflow: hidden;
