--- a/src/scss/block/image.scss
+++ b/src/scss/block/image.scss
@@ -8,7 +8,7 @@
 		.loaderWrapper { border-radius: 4px; border: solid 1px #d2d0c2; height: 48px; width: 100%; }
 		.error { margin: 0px; font-size: 13px; line-height: 18px; }
 		
-		.wrap { display: inline-block; position: relative; }
+		.wrap { position: relative; }
 		.img { max-width: 100%; display: block; }
 		
 		.icon.resize {
