--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -47,11 +47,13 @@
 	}
 	
 	/* Row */
-	.block.blockLayout.c0 { padding: 7px 0px 0px 0px; }
+	.block.blockLayout.c0 { padding: 7px 0px; }
 	.block.blockLayout.c0 > .wrapMenu { display: none; }
-	.block.blockLayout.c0 > .wrapContent { width: 100%; }
+	.block.blockLayout.c0 > .wrapContent { width: 100%; overflow: visible; }
 	.block.blockLayout.c0 > .wrapContent > .children { display: flex; }
-	.block.blockLayout.c0 > .wrapContent > .dropTarget { display: none; }
+	.block.blockLayout.c0 > .wrapContent > .dropTarget { width: 100%; height: 7px; position: absolute; left: 0px; }
+	.block.blockLayout.c0 > .wrapContent > .dropTarget.targetTop { top: -7px; }
+	.block.blockLayout.c0 > .wrapContent > .dropTarget.targetBot { bottom: -7px; }
 	
 	/* Column */
 	.block.blockLayout.c1 { padding: 0px; }
