--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -56,6 +56,15 @@ a { color: $colorBlack; }
 .dropTarget.isOver.bottom {
 	.line { width: 100%; height: 2px; left: 0px; bottom: 0px; }
 }
+
+/* DropTarget for Layout.Row */
+.dropTarget.targetTop.isOver.top { 
+	.line { width: 100%; height: 2px; left: 0px; top: auto; bottom: 0px; }
+}
+.dropTarget.targetBot.isOver.bottom {
+	.line { width: 100%; height: 2px; left: 0px; bottom: auto; top: 0px; }
+}
+
 .dropTarget.isOver.left { 
 	.line { width: 2px; height: 100%; left: 0px; top: 0px; }	
 }
