#40: removed selection rectangle + small refactoring

--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -1,6 +1,8 @@
 $bgColor: rgba(79,177,239,0.1);
 
 html.debug {
+	#selection-rect { opacity: 1; }
+	
 	.blocks {
 		.block { border: 1px solid rgba(255,0,0,0.3); }
 		.block.blockLayout.c0 { border-color: rgba(0,255,0,0.3); }
