--- a/src/scss/component/selection.scss
+++ b/src/scss/component/selection.scss
@@ -2,4 +2,7 @@
 
 .selection { position: relative; user-select: none; }
 .selection * { user-select: none; }
-#rect { border: 1px dotted $colorBlack; position: absolute; left: 0px; top: 0px; width: 0px; height: 0px; display: none; z-index: 102; }
+#selection-rect { 
+	border: 1px dotted $colorBlack; position: absolute; left: 0px; top: 0px; width: 0px; height: 0px; display: none; z-index: 102;
+	opacity: 0; 
+}
