--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -50,27 +50,14 @@ a { color: $colorBlack; }
 }
 
 .dropTarget.isOver.middle { background: rgba(255,187,44,0.3) !important; }
-.dropTarget.isOver.top { 
-	.line { width: 100%; height: 2px; left: 0px; top: 0px; }
-}
-.dropTarget.isOver.bottom {
-	.line { width: 100%; height: 2px; left: 0px; bottom: 0px; }
-}
+.dropTarget.isOver.top { box-shadow: 0px -2px 0px $colorOrange; }
+.dropTarget.isOver.bottom { box-shadow: 0px 2px 0px $colorOrange; }
+.dropTarget.isOver.left { box-shadow: -2px 0px 0px $colorOrange; }
+.dropTarget.isOver.right { box-shadow: 2px 0px 0px $colorOrange; }
 
 /* DropTarget for Layout.Row */
-.dropTarget.targetTop.isOver.top { 
-	.line { width: 100%; height: 2px; left: 0px; top: auto; bottom: 0px; }
-}
-.dropTarget.targetBot.isOver.bottom {
-	.line { width: 100%; height: 2px; left: 0px; bottom: auto; top: 0px; }
-}
-
-.dropTarget.isOver.left { 
-	.line { width: 2px; height: 100%; left: 0px; top: 0px; }	
-}
-.dropTarget.isOver.right {
-	.line { width: 2px; height: 100%; right: 0px; top: 0px; }
-}
+.dropTarget.targetTop.isOver.top { box-shadow: 0px -2px 0px $colorOrange inset; }
+.dropTarget.targetBot.isOver.bottom { box-shadow: 0px 2px 0px $colorOrange inset; }
 
 .textColor-grey { color: #aca996 !important; }
 .textColor-yellow { color: #ecd91b !important; }
