--- a/src/scss/component/inputWithFile.scss
+++ b/src/scss/component/inputWithFile.scss
@@ -1,7 +1,7 @@
 @import "~scss/_vars";
 
 .inputWithFile {
-	line-height: 24px; padding: 11px; height: 48px; border-radius: 4px; border: solid 1px #d2d0c2; color: #adaa95;
+	line-height: 24px; padding: 11px; border-radius: 4px; border: solid 1px #d2d0c2; color: #adaa95;
 	transition: background 0.2s ease-in-out; white-space: nowrap; overflow: hidden;
 }
 .inputWithFile:hover { background: #f7f5f0; }
@@ -9,7 +9,6 @@
 	.txt { line-height: 23px; padding-top: 1px; height: 24px; overflow: hidden; width: calc(100% - 30px); }
 	.fileWrap { display: inline-block; vertical-align: top; }
 	.fileWrap .border { border-bottom: 1px solid #d2d0c2; display: inline-block; line-height: 1; transition: $transitionFast; }
-	.fileWrap:hover {  }
 	.fileWrap:hover .border { border-color: #000; cursor: pointer; color: #000; }
 
 	.urlToggle { cursor: text; display: inline-block; }
