--- a/src/scss/component/footer.scss
+++ b/src/scss/component/footer.scss
@@ -1,3 +1,6 @@
+@import "~scss/_vars";
+
+.footer { transition: $transitionFast; }
 .footer {
 	.copy { width: 120px; position: fixed; left: 50%; bottom: 12px; z-index: 10; text-align: center; margin-left: -60px; color: #fff; }
 	
